--- a/hello/pom.xml
+++ b/hello/pom.xml
@@ -30,7 +30,18 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-				</configuration>
+	  <cloudHubDeployment>
+      <uri>https://anypoint.mulesoft.com</uri>
+      <muleVersion>${app.runtime}</muleVersion>
+      <username>${username}</username>
+      <password>${password}</password>
+      <applicationName>${cloudhub.application.name}</applicationName>
+      <environment>${env}</environment>x	xxx
+      <workerType>${vCore}</workerType>
+      <workers>${workers}</workers>
+    </cloudHubDeployment>
+  </configuration>
+				
 			</plugin>
 		</plugins>
 	</build>
